Added AWS Solutions Architect Associate cert

--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -110,6 +110,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - [[#education][Education]]
   - [[#phd-in-computer-science-purdue-university][Ph.D. in Computer Science, Purdue University]]
 - [[#certifications][Certifications]]
+  - [[#aws-certified-solutions-architect--associate][AWS Certified Solutions Architect – Associate]]
   - [[#certified-information-systems-security-professional-cissp][Certified Information Systems Security Professional (CISSP)]]
   - [[#safereg-4-certified-product-ownerproduct-manager][SAFe\reg 4 Certified Product Owner/Product Manager]]
 - [[#research-publications-teaching-and-references][Research, Publications, Teaching and References]]
@@ -316,6 +317,12 @@ I design and build highly secure cloud solutions for AWS Global accounts.
 * Certifications
 :PROPERTIES:
 :CV_ENV:   cventries
+:END:
+
+** [[https://www.credly.com/badges/3fe94170-f19a-4552-95a8-ea6b13a7586e/public_url][AWS Certified Solutions Architect – Associate]]
+:PROPERTIES:
+:CV_ENV:   cvsubentry
+:DATE: October 2021
 :END:
 
 ** [[https://www.youracclaim.com/badges/98814af3-575b-4350-9667-70eddfea1da4/public_url][Certified Information Systems Security Professional (CISSP)]]
