Added AWS SA-Pro certification

--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -110,6 +110,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - [[#education][Education]]
   - [[#phd-in-computer-science-purdue-university][Ph.D. in Computer Science, Purdue University]]
 - [[#certifications][Certifications]]
+  - [[#aws-certified-solutions-architect--professional][AWS Certified Solutions Architect – Professional]]
   - [[#aws-certified-solutions-architect--associate][AWS Certified Solutions Architect – Associate]]
   - [[#aws-certified-security--specialty][AWS Certified Security – Specialty]]
   - [[#certified-information-systems-security-professional-cissp][Certified Information Systems Security Professional (CISSP)]]
@@ -318,6 +319,12 @@ I design and build highly secure cloud solutions for AWS Global accounts.
 * Certifications
 :PROPERTIES:
 :CV_ENV:   cventries
+:END:
+
+** [[https://www.credly.com/badges/5f462d17-402c-44b8-a8f9-80187ad0d7a1/public_url][AWS Certified Solutions Architect – Professional]]
+:PROPERTIES:
+:CV_ENV:   cvsubentry
+:DATE: December 2021
 :END:
 
 ** [[https://www.credly.com/badges/3fe94170-f19a-4552-95a8-ea6b13a7586e/public_url][AWS Certified Solutions Architect – Associate]]
